style: :lipstick: prevent wrap lable text

--- a/src/components/UI/input/Input.module.scss
+++ b/src/components/UI/input/Input.module.scss
@@ -9,6 +9,7 @@
     left: 10px;
     background-color: var(--bgc);
     padding: 0.3rem;
+    white-space: nowrap;
   }
 
   input {
